fix: tag 텍스트 벗어남, tag container 모바일 일 때 flex-wrap 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,7 +97,7 @@ button {
 }
 
 .tag_container {
-  @apply flex items-center gap-2;
+  @apply flex items-center gap-2 max-md:flex-wrap;
 }
 
 .button_transition {
